solved a bug with page layout with overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,17 @@
 /*Google Font Styles*/
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 
 /*general-------- the body and content push footer to bottom of page*/
 
@@ -10,11 +21,12 @@ body {
     padding: 0;
     display:flex;
     flex-direction: column;
+    background-color:#A5B452 ;
 
     
 }
 .content{
-    flex:1;
+    flex:1 ;
 }
 
 
@@ -60,12 +72,13 @@ header {
 
 .pub-stop{
     padding-right:60px;
-    padding-bottom: 40px;
+  
+    padding-top: 25px;
 }
 
 .love-to {
-    padding-top: 40px;
-    height:100px;
+    padding-top: 30px;
+    height:40px;
 }
 
 
@@ -83,7 +96,7 @@ header {
     padding: 0;
 }
 .menuitem {
-    height: 120px;
+    height: 50px;
     text-align: center;
     padding: 0;
 }
@@ -116,15 +129,10 @@ header {
 }
 
 
-
-
-
-
-
 .social-icons{
 font-size:  40px;
 background-color: #3D0814;
-min-height: 120px;
+min-height: 50px;
 
 
 }
